apps/base/owncast/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncast
  namespace: owncast
spec:
  selector:
    app: owncast
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: rtmp
      port: 1935
      targetPort: 1935
  type: ClusterIP
