apps/base/owncast/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncast-web
  namespace: owncast
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cast.bacherik.de
      secretName: cast-tls
  rules:
    - host: cast.bacherik.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncast
                port:
                  name: http
