apps/base/owncast/irtcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: owncast-rtmp
  namespace: owncast
spec:
  entryPoints:
    - rtmp
  routes:
    - match: HostSNI(`rtmp.bacherik.de`)
      services:
        - name: owncast
          port: 1935
  tls:
    secretName: rtmp-tls
